# suitecase

./: AI_USAGE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  todo.md
.agents/skills/create-release/: SKILL.md
.agents/skills/update-changelog/: SKILL.md
.github/workflows/: ci.yml  release.yml
examples/: failing.rs  filter.rs  hooks.rs  mock.rs  per_case_tests.rs  quickstart.rs  sqlx_sqlite.rs
examples/sqlx_sqlite_migrations/: 20240101000000_init.sql  20240101120000_add_user_version.sql
src/: lib.rs
src/assert/: boolean.rs  boolean_test.rs  collections.rs  collections_test.rs  equality.rs  equality_test.rs  errors.rs  errors_test.rs  floats.rs  floats_test.rs  fs.rs  fs_test.rs  mod.rs  option_result.rs  option_result_test.rs  ordering.rs  ordering_test.rs  panic.rs  panic_test.rs  pointer.rs  pointer_test.rs  root_test.rs  time.rs  time_test.rs
src/mock/: arguments.rs  matchers.rs  mock_test.rs  mod.rs
src/suite/: cargo_filter_output_test.rs  fail.rs  fail_test.rs  mod.rs  selection_test.rs  shared_state_test.rs  suite_test.rs  test_suite_order_test.rs
tests/: sqlx_sqlite.rs  suite.rs
