[package]
name = "suitecase"
version = "0.0.3"
edition = "2024"
description = "The structured test toolkit. A sync Rust crate for named cases, optional suite and per-case hooks, and macros so each case appears in cargo test—without a custom harness or DSL."
license = "MIT"

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
