[package]
name = "suitecase"
version = "0.0.5"
edition = "2024"
description = "The structured test toolkit. A sync Rust crate for named cases, optional suite and per-case hooks, and macros so each case appears in cargo test—without a custom harness or DSL."
documentation = "https://docs.rs/suitecase"
homepage = "https://github.com/emilpriver/suitecase"
repository = "https://github.com/emilpriver/suitecase"
license = "MIT"

[dependencies]

[[bin]]
name = "cargo-suitecase"
path = "bin/cargo_suitecase.rs"

[dev-dependencies]
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
